Fixed scrollbars

--- a/src/components/Workspace/WorkSpace.css
+++ b/src/components/Workspace/WorkSpace.css
@@ -21,6 +21,9 @@
   display: flex;
   flex-direction: row;
   column-gap: var(--index-script-gap);
+  overflow: auto;
+  overflow-x: auto;
+  
 }
 
 .script-index-bar {
@@ -33,4 +36,8 @@
   resize: none;
   border: none;
   white-space: pre-wrap;
+}
+textarea {
+  overflow-y: clip;
+  /* overflow-x: scroll; */
 }
